# youtube-search

./: .dockerignore  .example.env  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
db/scripts/: insert.sql  schema.sql
scripts/db/: schema.sql
src/: config.py  main.py
src/common/: constants.py  utils.py
src/db/: database.py  models.py
src/extenstions/: log_format.py  logger_setup.py  logging_router.py
src/routes/: search_video.py
src/services/: yt_video.py
src/youtube_polling/: config.py  database.py  logic.py  main.py  models.py  route.py  schemas.py
src/youtube_polling/common/: utils.py
src/youtube_polling/extenstions/: logger_setup.py  logging_router.py  middleware.py
